# edge-10x-prompt-flows

./: .gitignore  pyproject.toml
.github/workflows/: research_assistant_ci_dev_workflow.yml  research_assistant_pr_dev_workflow.yml
math_coding/: experiment.yaml
math_coding/configs/: deployment_config.json
math_coding/flows/math_evaluation_flow/: flow.dag.yaml  line_process.py
math_coding/flows/math_standard_flow/: flow.dag.yaml
math_coding/tests/: test_env.py  test_math_evaluation.py
named_entity_recognition/configs/: deployment_config.json
use_case_research_assistant/: experiment.yaml  sample-request.json
use_case_research_assistant/configs/: deployment_config.json
use_case_research_assistant/data/: eval_data.jsonl  eval_data_new.jsonl  sample_data.jsonl
use_case_research_assistant/flows/bulk/: make_google_search_queries.py
use_case_research_assistant/flows/evaluation/: flow.dag.yaml
use_case_research_assistant/flows/evaluation_old/: flow.dag.yaml  search_question.py
use_case_research_assistant/flows/standard/: QUESTION_REFORMULATION_1.jinja2  QUESTION_REFORMULATION_2.jinja2  QUESTION_REFORMULATION_3.jinja2  QUESTION_REFORMULATION_4.jinja2  flow.dag.yaml  make_google_search_queries.py
use_case_research_assistant/flows/standard_old/: QUESTION_EXPANDER.jinja2  search_question.py
use_case_research_assistant/tests/: test_questions.py
